--- a/1.html
+++ b/1.html
@@ -201,7 +201,7 @@
 <div>
    <div>Role-based access control models<br/></div>
    <div>
-      <a href="/personal/michaelchow_hkit_edu_hk/Blog/T2021A-CP60041E-N/Shared%20Documents/Forms/AllItems.aspx?newTargetListUrl=/personal/michaelchow_hkit_edu_hk/Blog/T2021A-CP60041E-N/Shared%20Documents&amp;viewpath=/personal/michaelchow_hkit_edu_hk/Blog/T2021A-CP60041E-N/Shared%20Documents/Forms/AllItems.aspx&amp;viewid=646b2703-b1a7-4c5a-b21c-a366f0734a10&amp;id=/personal/michaelchow_hkit_edu_hk/Blog/T2021A-CP60041E-N/Shared%20Documents/WK3%20Access%20Control">Documents &gt; Wk​3&#160;...&#160;&#160;</a><br/></div>
+      <a href="/WK3 Access Control/i94rbac(org).pdf">Documents &gt; Wk​3&#160;...&#160;&#160;</a><br/></div>
    <div>Attached Files:<br/></div>
    <div>File i94rbac(org).pdf&#160;<br/></div>
    <div>This paper written by Ravi Sandu, is one of most cited computer science paper.&#160;​<br/></div>
