--- a/1.html
+++ b/1.html
@@ -180,7 +180,7 @@
       <div>&#160;​​<br/></div>
       <div>Please find the Files below by clicking this:<br/></div>
       <div>
-         <a href="/personal/michaelchow_hkit_edu_hk/Blog/T2021A-CP60041E-N/Shared%20Documents/Forms/AllItems.aspx?viewid=646b2703-b1a7-4c5a-b21c-a366f0734a10&amp;id=/personal/michaelchow_hkit_edu_hk/Blog/T2021A-CP60041E-N/Shared%20Documents/WK2%20Access%20Control">Documents &gt; Wk2&#160;...</a>&#160;<span class="ms-rteForeColor-2">&#160;</span><br/></div>
+         <a href="WK2 Access Control/ac.k1.pdf">Documents &gt; Wk2&#160;...</a>&#160;<span class="ms-rteForeColor-2">&#160;</span><br/></div>
       <div>Lecture: ac.k1.pdf<br/></div>
    </div>
    <div>
