--- a/1.html
+++ b/1.html
@@ -180,7 +180,7 @@
       <div>&#160;​​<br/></div>
       <div>Please find the Files below by clicking this:<br/></div>
       <div>
-         <a href="WK2 Access Control/ac.k1.pdf">Documents &gt; Wk2&#160;...</a>&#160;<span class="ms-rteForeColor-2">&#160;</span><br/></div>
+         <a href="./WK2 Access Control/ac.k1.pdf">Documents &gt; Wk2&#160;...</a>&#160;<span class="ms-rteForeColor-2">&#160;</span><br/></div>
       <div>Lecture: ac.k1.pdf<br/></div>
    </div>
    <div>
